--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,10 +1,12 @@
 
 tasks:
   - init: |
-      go get github.com/spf13/cobra/cobra
       go build
-    command: |
-      ./mycli --help
+    # command: |
+    #   ./mycli --help
 vscode:
   extensions:
     - golang.go
+    - pkief.material-icon-theme
+    - eamodio.gitlens
+
